# app/Http/Controllers/type_3/UserController.php
@@ -1,9 +1,9 @@
 <?php
 
-namespace App\Http\Controllers\type_2;
+namespace App\Http\Controllers\type_3;
 
 use Carbon\Carbon;
-use App\Models\User;
+use App\Models\User3;
 use Illuminate\Http\Request;
 use Illuminate\Validation\Rule;
 use App\Http\Controllers\Controller;
@@ -11,11 +11,11 @@ use Illuminate\Support\Facades\Validator;
 
 class UserController extends Controller
 {
-   /**
+       /**
      * @OA\Post(
      *    summary="add tracking",
-     *     path="/api/type_2/user",
-     *     tags={"Type_2"},
+     *     path="/api/type_3/user",
+     *     tags={"Type_3"},
      * 
      *   @OA\Parameter(
      *     name="name",
@@ -25,27 +25,12 @@ class UserController extends Controller
      *          (type="string")
      *     ),
      * @OA\Parameter(
-     *     name="surname",
+     *     name="email",
      *     in="query",
      *     required=true,
      *     @OA\Schema
      *          (type="string")
      *     ),
-     * @OA\Parameter(
-     *     name="dept_id",
-     *     in="query",
-     *     required=true,
-     *     @OA\Schema
-     *          (type="integer")
-     *     ),
-     * @OA\Parameter(
-     *     name="position_id",
-     *     in="query",
-     *     required=true,
-     *     @OA\Schema
-     *          (type="integer")
-     *     ),
-     * 
      *     @OA\Response(response="200", description="Display a listing of type-auto."),
      *     @OA\Response(response=401, description="Unauthorized"),
      *     @OA\Response(response=404, description="Not Found"),
@@ -54,46 +39,41 @@ class UserController extends Controller
     public function store(Request $request){
         $validator = Validator::make($request->all(),[
             'name' => 'required',
-            'surname' => 'required',
-            'position_id' => 'required|numeric',
-            'dept_id' => 'required|numeric'
+            'email' => 'required',
+
         ]);
         if($validator->fails()){
             return response()->json(['errors'=> $validator->errors()]);
         }
         $token = bin2hex(openssl_random_pseudo_bytes(8));
-        $date_start = Carbon::now()->format('y:m:d h:i:s');
-        $user = User::create([
+        $user = User3::create([
             'token' => $token,
             'name' => $request->name,
-            'surname' => $request->surname,
-            'position_id' => $request->position_id,
-            'dept_id' => $request->dept_id,
-            'date_start' => $date_start,
+            'email' => $request->email,
+            'old_email' => $request->email,
             'current' => 1,
-            'date_end' => $date_start // date end when update
         ]);
         return response()->json(['user_id' => $user]);
     }
     /**
      * @OA\Get(
      *    summary="add tracking",
-     *     path="/api/type_2/user",
-     *     tags={"Type_2"},
+     *     path="/api/type_3/user",
+     *     tags={"Type_3"},
      *     @OA\Response(response="200", description="Display a listing of type-auto."),
      *     @OA\Response(response=401, description="Unauthorized"),
      *     @OA\Response(response=404, description="Not Found"),
      * )
      */
     public function index(){
-        $users  = User::where('current' , 1)->get();
+        $users  = User3::where('current' , 1)->get();
         return $users;
     }
     /**
      * @OA\Patch(
      *    summary="adad tracking",
-     *     path="/api/type_2/user/{id}",
-     *     tags={"Type_2"},
+     *     path="/api/type_3/user/{id}",
+     *     tags={"Type_3"},
      * 
      *   @OA\Parameter(
      *     name="id",
@@ -103,56 +83,30 @@ class UserController extends Controller
      *          (type="string")
      *     ),
      *  @OA\Parameter(
-     *     name="name",
+     *     name="email",
      *     in="query",
      *     required=true,
      *     @OA\Schema
      *          (type="string")
      *     ),
-     * @OA\Parameter(
-     *     name="surname",
-     *     in="query",
-     *     required=true,
-     *     @OA\Schema
-     *          (type="string")
-     *     ),
-     * @OA\Parameter(
-     *     name="dept_id",
-     *     in="query",
-     *     required=true,
-     *     @OA\Schema
-     *          (type="integer")
-     *     ),
-     * @OA\Parameter(
-     *     name="position_id",
-     *     in="query",
-     *     required=true,
-     *     @OA\Schema
-     *          (type="integer")
-     *     ),
-     * 
      *     @OA\Response(response="200", description="Display a listing of type-auto."),
      *     @OA\Response(response=401, description="Unauthorized"),
      *     @OA\Response(response=404, description="Not Found"),
      * )
      */
     public function update(Request $request , $id){
-        $user = User::find($id);
+        $user = User3::find($id);
         $token = $user->token;
         $user->current = 0;
-        $date = Carbon::now()->format("y:m:d h:i");
-        $user->date_end = $date;
+        $name = $user->name;
+        $old_email = $user->email;
         $user->save();
-        
-        $user = User::create([
+        $user = User3::create([
             'token' => $token,
-            'name' => $request->name,
-            'surname' => $request->surname,
-            'position_id' => $request->position_id,
-            'dept_id' => $request->dept_id,
-            'date_start' => $date,
+            'name' => $name,
+            'email' => $request->email,
+            'old_email' => $old_email,
             'current' => 1,
-            'date_end' => $date // date end when update
         ]);
 
         return $user;
@@ -160,8 +114,8 @@ class UserController extends Controller
     /**
      * @OA\Get(
      *    summary="add tracking",
-     *     path="/api/type_2/user/{id}",
-     *     tags={"Type_2"},
+     *     path="/api/type_3/user/{id}",
+     *     tags={"Type_3"},
      *     @OA\Parameter(
      *     name="id",
      *     in="path",
@@ -176,13 +130,13 @@ class UserController extends Controller
      */
     public function show($id){
         $validator = Validator::make(['id'=>$id],[
-            'id' => Rule::exists(User::class,'id'),
+            'id' => Rule::exists(User3::class,'id'),
         ]);
         if($validator->fails())
         {
             return response()->json($validator->errors());
         }
-        $users = User::where('token' , User::find($id)->token)->get();
+        $users = User3::where('token' , User3::find($id)->token)->get();
         return $users;
     }
 
